# systemIntegration

./: info.txt
01_Miscellanous/: paymentiframe.html
02._DataFiles/: me.json  me.xml  me.yaml  pyReadParser.py
02._DataFiles/nodejsParser/: index.js  package.json
03_Modules/html_no_modules/: index.html  index.js  myModule.js
03_Modules/html_with_modules/: index.js  myModule.js
03_Modules/node_commonjs_modules/: index.js  myModule.js
03_Modules/node_es_modules/: index.js  myModule.js
04._Encoding_Decoding/: index.js
04._Encoding_Decoding/python/: main.py
08._Server-To-Server/node/: app.js  index.html
10._Date/: package-lock.json
10._Date/node/: index.js
11._Short_Polling/node/: app.js
12._Long_Polling/node/: app.js
13._Server-sent_Events/node/: app.js
13._Server-sent_Events/python-sse/: main.py  pyproject.toml
13._Server-sent_Events/python-sse/templates/: index.html
14._WebSockets/node/: clients.js  index.html  package.json  server.js
14._WebSockets/python_fastapi/: main.py  pyproject.toml
14._WebSockets/python_websockets/: pyproject.toml  server.py
15._WebHooks/node/: app.js  package.json
15._WebHooks/python-webhooks/: main.py  pyproject.toml
16._WHAT/: index.html
16._WHAT/node/: app.js  package.json
16._WHAT/python_cors/: main.py  pyproject.toml
17._MultipartForms/: index.html
17._MultipartForms/node/: app.js  package.json
23._ DatabaseMigrations/node-knex/: knexfile.js  package-lock.json  package.json
27._Web_Scraping_Crawling/01._Node/: index.html
IsoDateNgrok/: IsoDateNgrok.sln
(+68 files in other folders)
